# controller/model.go
@@ -40,6 +40,9 @@ func init() {
 		channelName := adaptor.GetChannelName()
 		modelNames := adaptor.GetModelList()
 		for _, modelName := range modelNames {
+			if retiredVideoModel(modelName) {
+				continue
+			}
 			openAIModels = append(openAIModels, dto.OpenAIModels{
 				Id:      modelName,
 				Object:  "model",
@@ -257,6 +260,7 @@ func ListModels(c *gin.Context, modelType int) {
 	}
 
 	ownerByModel := map[string]string{}
+	userModelNames = withoutRetiredVideoModels(userModelNames)
 	if len(ownerGroups) > 0 {
 		ownerByModel = getPreferredModelOwners(userModelNames, ownerGroups)
 	}
@@ -320,7 +324,7 @@ func DashboardListModels(c *gin.Context) {
 func EnabledListModels(c *gin.Context) {
 	c.JSON(200, gin.H{
 		"success": true,
-		"data":    model.GetEnabledModels(),
+		"data":    withoutRetiredVideoModels(model.GetEnabledModels()),
 	})
 }
 
